fix cropped video inside of website-tabs

--- a/src/components/WebsiteTabs/website-tabs.scss
+++ b/src/components/WebsiteTabs/website-tabs.scss
@@ -219,3 +219,7 @@
     max-width: 50%;
   }
 }
+
+.website-tabs .gatsby-resp-iframe-wrapper {
+  padding-top: 8px;
+}
